--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.13.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "moment": "^2.27.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
